# slack-keyword-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
alembic/: env.py
alembic/versions/: 01edc2603646_add_active_column_to_keyword_table.py  49a375bdc260_rename_keyword_table_to_subscription.py  4e0246d1cadf_rename_active_column_of_keyword_table_.py  4fe7d3e609e2_add_channel_table.py  a5beef0a0d51_add_keyword_table.py  e306363461d7_rename_word_column_of_subscription_.py  eb748a2d1c9c_remove_unsubscribe_column_from_.py  f85359967c92_add_subscription_view.py
scripts/: alembic.sh  deploy.sh  start.sh
slack/: keyword-bot-dev.yml  keyword-bot-prod.yml
src/slack_app/: bootstrap.py  config.py  model.py  orm.py  repository.py  services.py  views.py
src/slack_app/adapters/: notifications.py  orm.py  repository.py
src/slack_app/domain/: commands.py  events.py  model.py
src/slack_app/entrypoints/: app.py  slack_app.py
src/slack_app/entrypoints/slack_app/: __init__.py  components.py  dev.py  prod.py
src/slack_app/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
systemd/: slack-app.service
tests/slack_app/: conftest.py  test_model.py  test_orm.py  test_repository.py  test_services.py
tests/slack_app/adapters/: test_orm.py  test_repository.py
tests/slack_app/domain/: test_model.py
tests/slack_app/integration/: test_orm.py  test_repository.py  test_unit_of_work.py  test_views.py
tests/slack_app/service_layer/: conftest.py  test_get_subscribers.py  test_services.py
tests/slack_app/unit/: conftest.py  test_handlers.py  test_model.py  test_notifications.py  test_repository.py  test_services.py
