[project]
name = "slack-app"
version = "0.1.0"
description = "Slack App"
authors = [
    {name = "Christoph Blessing", email = "33834216+cblessing24@users.noreply.github.com"},
]
dependencies = [
    "flask>=2.1.2",
    "slack-bolt>=1.13.1",
    "python-dotenv>=0.20.0",
    "sqlalchemy>=1.4.36",
    "psycopg2-binary>=2.9.3",
    "alembic>=1.7.7",
]
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
[project.optional-dependencies]

[tool]
[tool.pdm]
[tool.pdm.scripts]
start = "flask run --port 80 --host 0.0.0.0"
coverage = "pytest --cov --cov-report=html:reports/coverage.html"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "mypy>=0.950",
    "black>=22.3.0",
    "isort>=5.10.1",
    "pynvim>=0.4.3",
    "pytest-cov>=3.0.0",
    "debugpy>=1.6.0",
]
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
files = [
    "src/**/*.py",
    "tests/**/*.py"
]
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["sqlalchemy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
branch = true
source = ["src"]
